--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset=""UTF-8>
-    <title>My fortfolio</title>
+    <title>tota.freelancer</title>
 
 
     <!--STYLESHEET-->
